tooling/nargo_cli/tests/snapshots/execution_failure/vector_pop_front_oob/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: cannot pop from a vector with length 0
  ┌─ src/main.nr:9:23
  │
9 │         let (x, s2) = vector.pop_front();
  │                       ----------------
  │
  = Call stack:
    1. src/main.nr:9:23

Failed assertion
