tooling/nargo_cli/tests/snapshots/execution_failure/vector_pop_front_oob/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Attempt to pop from an empty vector
  ┌─ src/main.nr:9:23
  │
9 │         let (x, s2) = vector.pop_front();
  │                       ------------------ Assertion failed
  │
  = Call stack:
    1: ?
            at src/main.nr:1:4
    2: main
            at src/main.nr:9:23

Error interpreting main function
